<?xml version="1.0"?>
<package>
  <name>dso_to_ros</name>
  <version>0.0.0</version>
  <description>dso_to_ros</description>
  <maintainer email="hahnb@student.ethz.ch">Benjamin Hahn</maintainer>
  <author>ASL</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
</package>


